2. Completed/ProductPricing/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
spec:
  selector:
    app: pricing
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
